--- a/static/css/style.css
+++ b/static/css/style.css
@@ -94,6 +94,27 @@
   border: 1px solid rgba(0, 0, 0, 0.2);
 }
 
+#id_detail {
+  max-width: 960px;
+  margin: auto;
+  padding: 2rem;
+}
+#id_detail h2 {
+  font-size: 1.25rem;
+  margin-bottom: 0.5rem;
+}
+#id_detail h3 {
+  margin-bottom: 1rem;
+}
+#id_detail h6 {
+  color: rgba(0, 0, 0, 0.75);
+  margin-bottom: 1rem;
+}
+#id_detail .section {
+  font-size: 0.875rem;
+  margin-bottom: 2rem;
+}
+
 @font-face {
   font-family: "Montserrat";
   src: url("fonts/Montserrat/Montserrat-Regular.ttf") format("truetype");
@@ -134,13 +155,17 @@ img {
   object-fit: cover;
 }
 
-p, h1, h2, h3, h4 {
+p, h1, h2, h3, h4, h5, h6 {
   margin: 0;
 }
 
 a {
   text-decoration: none;
   color: #000;
+}
+
+.main-image img {
+  height: 40vw;
 }
 
 #id_footer {
