--- a/static/css/neoparques/_home_page.scss
+++ b/static/css/neoparques/_home_page.scss
@@ -49,6 +49,7 @@
                 font-weight: 500 !important;
                 flex: 1;
                 font-size: 0.8125rem;
+                text-align: left;
                 img {
                     display: none;
                 }
