--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -1,6 +1,7 @@
 @forward 'neoparques/header';
 @forward 'neoparques/home_page';
 @forward 'neoparques/detail_page';
+@forward 'neoparques/about_us_page';
 @use 'neoparques/variables' as v;
 
 
