--- a/static/css/style.css
+++ b/static/css/style.css
@@ -75,6 +75,7 @@
   font-weight: 500 !important;
   flex: 1;
   font-size: 0.8125rem;
+  text-align: left;
 }
 #id_list .protected-area .pa-content .pa-description img {
   display: none;
@@ -104,7 +105,8 @@
   margin-bottom: 0.5rem;
 }
 #id_detail h3 {
-  margin-bottom: 1rem;
+  margin: 2.5rem 0 1.25rem 0;
+  font-weight: 700;
 }
 #id_detail h6 {
   color: rgba(0, 0, 0, 0.75);
@@ -112,14 +114,35 @@
 }
 #id_detail .section {
   font-size: 0.875rem;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
 }
 #id_detail .section p {
   margin-bottom: 1rem;
 }
-#id_detail .section p:has(img) {
-  display: inline-block;
+#id_detail .section img {
+  margin-bottom: 0.5rem;
+}
+#id_detail .section li {
+  margin-bottom: 0.5rem;
+}
+#id_detail .section ul {
+  padding-left: 1rem;
+}
+
+#id_about_us {
+  max-width: 960px;
+  margin: auto;
+  padding: 2rem 1rem;
+}
+#id_about_us h1 {
+  font-size: 2.25rem;
+  text-align: center;
+  margin: 3rem 0 2rem 0;
+}
+#id_about_us h2 {
+  margin-bottom: 0.75rem;
+}
+#id_about_us p {
+  margin-bottom: 1rem;
 }
 
 @font-face {
